# ChangeLens

./: .gitignore  .prettierignore  AGENTS.md  ChangeLens.slnx  README.md  compose.yaml  eslint.config.mjs  run-locally.md
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/capabilities/: main-window.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: engine_information.rs  lib.rs  main.rs
src/desktop/src-tauri/src/engine_information/: constants.rs  mod.rs
src/desktop/src-tauri/src/engine_information/interfaces/: engine_information_service.rs  mod.rs
src/desktop/src-tauri/src/engine_information/models/: engine_command_error.rs  engine_exchange_error.rs  engine_information.rs  engine_information_parameters.rs  engine_request.rs  engine_response.rs  mod.rs
src/desktop/src-tauri/src/engine_information/services/: engine_client.rs  engine_diagnostics.rs  engine_path.rs  engine_process.rs  engine_state.rs  mod.rs
src/desktop/src-tauri/src/engine_protocol/: constants.rs  mod.rs
src/desktop/src-tauri/src/engine_protocol/models/: action_error_detail.rs  action_error_kind.rs  engine_action_error.rs  engine_exchange_error.rs  engine_protocol_request.rs  engine_response.rs  engine_shutdown_outcome.rs  mod.rs  operation_error_type.rs
src/desktop/src-tauri/src/engine_protocol/services/: engine_client.rs  engine_diagnostics.rs  engine_path.rs  engine_process.rs  mod.rs  (+1 more)
src/desktop/src-tauri/src/engine_status/: commands.rs  constants.rs  mod.rs
src/desktop/src-tauri/src/repositories/: commands.rs  constants.rs  mod.rs
(+207 files in other folders)
