[package]
name = "changelens-desktop"
version = "0.1.0"
description = "The native ChangeLens desktop shell"
edition = "2024"
rust-version = "1.97.1"

[lib]
name = "changelens_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
native-dialog = "=0.9.7"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
tauri = { version = "=2.11.5", features = [] }

[dev-dependencies]
tauri = { version = "=2.11.5", features = ["test"] }

[[test]]
name = "engine_status_command"
path = "../../../tests/integration/desktop/EngineStatus/engine_status_command.rs"

[[test]]
name = "engine_status_process"
path = "../../../tests/integration/desktop/EngineStatus/engine_status_process.rs"

[[test]]
name = "repository_process"
path = "../../../tests/integration/desktop/Repositories/repository_process.rs"

[[test]]
name = "repository_commands"
path = "../../../tests/integration/desktop/Repositories/repository_commands.rs"
